KTS-2800 "Dashlets display with horizontal lines between text" Fixed. Changed the style overflow and padding
Committed By:Yusuf Davids
Reviewed By:Jalaloedien Abrahams

git-svn-id: https://kt-dms.svn.sourceforge.net/svnroot/kt-dms/trunk@7929 c91229c3-7414-0410-bfa2-8a42b809f60b

--- a/resources/css/kt-framing.css
+++ b/resources/css/kt-framing.css
@@ -553,8 +553,10 @@ a.main_nav_item {
     top: 0;
     z-index: 1;
     width:auto;
-    padding: 0 2em 1em 0;
-    overflow: auto;
+    /*padding: 0 2em 1em 0; 
+    overflow: auto;*/ 
+    padding: 0.25em 2em 0em 0em; 
+    overflow: hidden; 
     min-height: 600px;
 }
 
